# haskell-mooc

./: TODO.md  hie.yaml
.devcontainer/: devcontainer.json
exercises/: Set1.hs  Set2a.hs  Set2b.hs  fourmolu.yaml  stack.yaml  tests.cabal
