name: tests
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  build-depends:
    HTTP,
    JuicyPixels,
    QuickCheck,
    array,
    base,
    bytestring,
    containers,
    deepseq,
    directory,
    generic-random,
    hspec,
    http-types,
    parallel,
    sqlite-simple,
    template-haskell,
    text,
    th-abstraction,
    transformers,
    wai,
    warp

  default-language: Haskell2010
